--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <nav id="navbar">    
             <a class="logo_name" href="">Cynthia Ugwu</a>
             
-             <h2  onclick="closemenu()">Close</h2>
+             <h2  onclick="closemenu()">CLOSE</h2>
 
             </nav>
             <div id="navlinks">
